syntax = "proto3";

package api;


import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/Dnlbb/auth/pkg/chat;chat";


service chat {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMessage (SendMessageRequest) returns (google.protobuf.Empty);
}



message CreateRequest {
    repeated string usernames = 1;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message SendMessageRequest {
    int64 chatID = 1;
    string fromUserName = 2;
    int64 fromUserID = 3;
    string body = 4;
    google.protobuf.Timestamp time = 5;
}

